[tool.poetry]
name = "pyspark-spec"
version = "0.0.1"
description = "Documenting behavior of PySpark with tests"
authors = ["MrPowers <matthewkevinpowers@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.7"

[tool.poetry.dev-dependencies]
pytest = "3.2.2"
pytest_describe = "^1.0.0"
pyspark = "3.1.1"
chispa = "^0.8.2"
black = "^21.4b2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
